--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <audio src="/static/audio/soaring.mp3" autoplay="true"></audio>
     <script src="/static/main.js"></script>
     <script>
         Elm.Main.fullscreen()
