--- a/assets/index.html
+++ b/assets/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/grid.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
