--- a/assets/index.html
+++ b/assets/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/grid.css">
+    <link rel="stylesheet" href="/static/css/elm.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
