--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <audio src="/static/audio/soaring.mp3" autoplay="true"></audio>
+    <audio src="/static/audio/soaring.mp3" autoplay="true" loop="true"></audio>
     <script src="/static/main.js"></script>
     <script>
         var app = Elm.Main.fullscreen()
